--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "6.4",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
